--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
         />
 </head>
-<body>
+<body class="human-body">
     <header class="header">
         <div class="menu">
             <a href="#" class="list">Игры</a>
@@ -116,7 +116,7 @@
                 <section class="other-games">
                     <h2 class="title-2">Другие игры</h2>
                     <div class="div">
-                        <div class="swiper mySwiper">
+                        <div class="swiper mySwiper swiper-index">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide">
                                 <img src="img/Frame 288.png" alt="">
@@ -295,7 +295,7 @@
                     <div class="modal">
                         <div class="modal_box">
                             <iframe class="modal-frame" width="560" height="315" src="https://www.youtube.com/embed/gSIAi5PvFWs?si=eWw9umP-H4dDqTFl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                            <?xml version="1.0" encoding="utf-8"?>
                             <svg class="modal-close" width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16 8L8 16M8.00001 8L16 16" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
