--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </div>
             <div class="container">
                 <div class="videos-all">
-                    <h2 class="title-2">Что говорят о наших играх</h2>
+                    <h2 class="title-2 tt-pl">Что говорят о наших играх</h2>
                     <div class="modal">
                         <div class="modal_box">
                             <iframe class="modal-frame" width="560" height="315" src="https://www.youtube.com/embed/gSIAi5PvFWs?si=eWw9umP-H4dDqTFl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -303,7 +303,7 @@
                     </div>
                    
                     <div class="div">
-                        <div class="swiper mySwiperTwo">
+                        <div class="swiper mySwiperTwo swiper-index">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide slide-click">
                                 <img src="img/Frame 318.png" class="swiper-slide-img" alt="">
