--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="human-body">
     <header class="header">
         <div class="menu">
-            <a href="#" class="list">Игры</a>
+            <a href="Beat_the_Humans.html" class="list">Игры</a>
             <a href="#" class="list list-company">Компания
                 <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19.0195 8.6L12.1195 15.5L5.01953 8.6" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
