--- a/Beat_the_Humans.html
+++ b/Beat_the_Humans.html
@@ -209,7 +209,7 @@
         </div>
        
     </header>   
-    <main class="main">
+    <main class="main main-human">
        <section class="humans-others">
             <div class="main-left main-left-overflow">
                     
@@ -218,7 +218,7 @@
                     <div class="humans-others-all">
                         <h2 class="title-2">Другие игры</h2>
                         <div class="div">
-                            <div class="swiper  swiper-humans">
+                            <div class="swiper swiper-humans">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"> 
                                         <img src="img/fr2.png" alt="">
