--- a/index.html
+++ b/index.html
@@ -39,32 +39,34 @@
         <div class="header-top">
            
              <div class="header_left">
-                <a href="#" class="logo"><img src="img/Logo.svg" alt=""></a>
-                <nav class="header-nav">
-                    <a class="header-nav-link" href="Beat_the_Humans.html">Игры</a>
-                    <a class="header-nav-link header-nav-link-ss" >Компания 
-                        <svg class="black-svg" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M19.0195 8.6L12.1195 15.5L5.01953 8.6" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
-                    <div class="header-nav-dropdown">
-                        <a href="#"  class="header-nav-dropdown-link">О компании</a>
-                        <a href="#" class="header-nav-dropdown-link">Publishing.reegames.net 
-                            <svg class="black-svg" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M6.6875 25.3333L25.3542 6.66663" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M12.9102 6.66663H25.3546V19.1111" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                <div class="stiky">
+                    <a href="#" class="logo"><img src="img/Logo.svg" alt=""></a>
+                    <nav class="header-nav">
+                        <a class="header-nav-link" href="Beat_the_Humans.html">Игры</a>
+                        <a class="header-nav-link header-nav-link-ss" >Компания 
+                            <svg class="black-svg" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19.0195 8.6L12.1195 15.5L5.01953 8.6" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </a>
-                        <a href="#" class="header-nav-dropdown-link">Store.reegames.net 
-                            <svg class="black-svg" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M6.6875 25.3333L25.3542 6.66663" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M12.9102 6.66663H25.3546V19.1111" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
+                        <div class="header-nav-dropdown">
+                            <a href="#"  class="header-nav-dropdown-link">О компании</a>
+                            <a href="#" class="header-nav-dropdown-link">Publishing.reegames.net 
+                                <svg class="black-svg" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.6875 25.3333L25.3542 6.66663" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M12.9102 6.66663H25.3546V19.1111" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                            <a href="#" class="header-nav-dropdown-link">Store.reegames.net 
+                                <svg class="black-svg" width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.6875 25.3333L25.3542 6.66663" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M12.9102 6.66663H25.3546V19.1111" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <a class="header-nav-link header-nav-link-3" href="#">Карьера 
                         </a>
-                    </div>
-                    <a class="header-nav-link header-nav-link-3" href="#">Карьера 
-                    </a>
-                </nav>
+                    </nav>
+                </div>
             </div>
             
             <div class="container">
@@ -103,7 +105,7 @@
                                     <path d="M44.944 33.2641C45.5106 33.5911 45.5106 34.4089 44.944 34.7359L27.2434 44.9554C26.6769 45.2825 25.9687 44.8736 25.9687 44.2194L25.9687 23.7806C25.9687 23.1264 26.6769 22.7175 27.2435 23.0446L44.944 33.2641Z" fill="black"/>
                                 </svg>
                                 <a href="https://www.youtube.com/watch?v=gSIAi5PvFWs" target="_blank" class="svg-abs">
-                                    <svg class="header_card-bot-rigth-svg" width="223" height="66" viewBox="0 0 223 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg class="header_card-bot-rigth-svg header_card-bot-rigth-svg-two" width="223" height="66" viewBox="0 0 223 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M222.5 58.0283C222.5 62.1548 219.155 65.5 215.028 65.5L3.88716 65.5C1.38785 65.5 -0.256866 62.8934 0.819016 60.6375L28.5767 2.43592C29.1408 1.25318 30.3345 0.499983 31.6448 0.499983L215.028 0.499999C219.155 0.5 222.5 3.84519 222.5 7.9717L222.5 58.0283Z" fill="white"/>
                                     </svg>        
                                     <p class="svg-abs-text">Трейлер</p>
@@ -294,7 +296,7 @@
                     <h2 class="title-2 tt-pl">Что говорят о наших играх</h2>
                     <div class="modal">
                         <div class="modal_box">
-                            <iframe class="modal-frame" width="560" height="315" src="https://www.youtube.com/embed/gSIAi5PvFWs?si=eWw9umP-H4dDqTFl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <!-- <iframe class="modal-frame" width="560" height="315" src="https://www.youtube.com/embed/gSIAi5PvFWs?si=eWw9umP-H4dDqTFl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
                             <?xml version="1.0" encoding="utf-8"?>
                             <svg class="modal-close" width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16 8L8 16M8.00001 8L16 16" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
