--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="header_rigth">
-                    <h1 class="header_rigth-title">Дарим радость Дарим радость Дарим радость rm -f .git/index.lock
+                    <h1 class="header_rigth-title">Дарим радость
                         и удовольствие от игры!
                     </h1>
                     <p class="header_rigth-text">Здесь вы найдёте увлекательные игровые проекты, предстоящие обновления
